// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots components|m-checkbox default 1`] = `
<div
  class="m-checkbox m--is-checkbox-left"
>
  <input
    class="m-checkbox__hidden"
    id="mCheckbox-f574f25d-be60-460d-b345-534a249b415b"
    type="checkbox"
  />
   
  <!---->
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-f574f25d-be60-460d-b345-534a249b415b"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <span
      class="m-checkbox__label"
    >
      A Checkbox
    </span>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
  >
    <!---->
  </div>
</div>
`;

exports[`Storyshots components|m-checkbox disabled 1`] = `
<div
  class="m-checkbox m--is-checkbox-left m--is-disabled"
>
  <input
    class="m-checkbox__hidden"
    disabled="disabled"
    id="mCheckbox-c66b8be7-8583-4b80-b67d-871c1b8eb5aa"
    type="checkbox"
  />
   
  <!---->
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-c66b8be7-8583-4b80-b67d-871c1b8eb5aa"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <span
      class="m-checkbox__label"
    >
      A Checkbox
    </span>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
  >
    <!---->
  </div>
</div>
`;

exports[`Storyshots components|m-checkbox error 1`] = `
<div
  class="m-checkbox m--is-checkbox-left m--has-error"
>
  <input
    class="m-checkbox__hidden"
    id="mCheckbox-8aa53667-cdb0-4b1a-a520-028fd6c71c80"
    type="checkbox"
  />
   
  <!---->
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-8aa53667-cdb0-4b1a-a520-028fd6c71c80"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <span
      class="m-checkbox__label"
    >
       Checkbox
    </span>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
  >
    <!---->
  </div>
</div>
`;

exports[`Storyshots components|m-checkbox error-message 1`] = `
<div
  class="m-checkbox m--is-checkbox-left m--has-error"
>
  <input
    class="m-checkbox__hidden"
    id="mCheckbox-e41fe219-d387-4e31-b221-0a2916ae4434"
    type="checkbox"
  />
   
  <!---->
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-e41fe219-d387-4e31-b221-0a2916ae4434"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <span
      class="m-checkbox__label"
    >
       Checkbox
    </span>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
  >
    <div
      class="m-validation-message__wrap"
    >
      <p
        class="m-validation-message__error"
      >
        <svg
          class="m-icon m-validation-message__error__icon"
          height="1em"
          width="1em"
        >
          <title>
            Erreur
          </title>
           
          <use
            aria-hidden="true"
            class=""
          />
        </svg>
         
        <span
          class="m-validation-message__text"
        >
          This is an error
        </span>
      </p>
       
      <!---->
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots components|m-checkbox focus 1`] = `
<div
  class="m-checkbox m--is-checkbox-left"
  focus="true"
>
  <input
    class="m-checkbox__hidden"
    id="mCheckbox-51b67fbb-c37f-457d-b06b-8434d58e696a"
    type="checkbox"
  />
   
  <!---->
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-51b67fbb-c37f-457d-b06b-8434d58e696a"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <span
      class="m-checkbox__label"
    >
       Checkbox
    </span>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
  >
    <!---->
  </div>
</div>
`;

exports[`Storyshots components|m-checkbox indeterminate 1`] = `
<div
  class="m-checkbox m--is-checkbox-left m--is-indeterminate"
>
  <input
    class="m-checkbox__hidden"
    id="mCheckbox-2feb6301-647a-4333-a1c2-f7736fbd21ec"
    type="checkbox"
  />
   
  <!---->
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-2feb6301-647a-4333-a1c2-f7736fbd21ec"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <span
      class="m-checkbox__label"
    >
      A Checkbox
    </span>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
  >
    <!---->
  </div>
</div>
`;

exports[`Storyshots components|m-checkbox label 1`] = `
<div
  class="m-checkbox m--is-checkbox-left"
  label="label"
>
  <input
    class="m-checkbox__hidden"
    id="mCheckbox-9c4a85e2-ee22-4826-94fb-08fee2d9a90d"
    type="checkbox"
  />
   
  <!---->
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-9c4a85e2-ee22-4826-94fb-08fee2d9a90d"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <span
      class="m-checkbox__label"
    >
      A Checkbox
    </span>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
  >
    <!---->
  </div>
</div>
`;

exports[`Storyshots components|m-checkbox position=right 1`] = `
<div
  class="m-checkbox m--is-checkbox-right"
>
  <input
    class="m-checkbox__hidden"
    id="mCheckbox-0808ea95-1bab-4395-868c-49757eb17b13"
    type="checkbox"
  />
   
  <!---->
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-0808ea95-1bab-4395-868c-49757eb17b13"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <span
      class="m-checkbox__label"
    >
      A Checkbox
    </span>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
  >
    <!---->
  </div>
</div>
`;

exports[`Storyshots components|m-checkbox readonly 1`] = `
<div
  class="m-checkbox m--is-checkbox-left m--is-readonly"
>
  <!---->
   
  <input
    id="mCheckbox-a26c601a-9346-43df-99b8-c4baf58b2a97"
    type="hidden"
    value="false"
  />
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-a26c601a-9346-43df-99b8-c4baf58b2a97"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <span
      class="m-checkbox__label"
    >
      A Checkbox
    </span>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
  >
    <!---->
  </div>
</div>
`;

exports[`Storyshots components|m-checkbox valid 1`] = `
<div
  class="m-checkbox m--is-checkbox-left m--is-valid"
>
  <input
    class="m-checkbox__hidden"
    id="mCheckbox-729f4b22-9cb3-4fb9-83f8-e8c7e4ae98cb"
    type="checkbox"
  />
   
  <!---->
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-729f4b22-9cb3-4fb9-83f8-e8c7e4ae98cb"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <span
      class="m-checkbox__label"
    >
       Checkbox
    </span>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
  >
    <!---->
  </div>
</div>
`;

exports[`Storyshots components|m-checkbox value 1`] = `
<div
  class="m-checkbox m--is-checkbox-left m--is-checked"
>
  <input
    class="m-checkbox__hidden"
    id="mCheckbox-cbecb749-3bee-4362-84f7-f9f7c9dc846c"
    type="checkbox"
  />
   
  <!---->
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-cbecb749-3bee-4362-84f7-f9f7c9dc846c"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <span
      class="m-checkbox__label"
    >
      A Checkbox
    </span>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
  >
    <!---->
  </div>
</div>
`;

exports[`Storyshots components|m-checkbox/position=right disabled 1`] = `
<div
  class="m-checkbox m--is-checkbox-right m--is-disabled"
>
  <input
    class="m-checkbox__hidden"
    disabled="disabled"
    id="mCheckbox-5d5e1b5b-71db-4f3c-a25b-11e5be65b206"
    type="checkbox"
  />
   
  <!---->
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-5d5e1b5b-71db-4f3c-a25b-11e5be65b206"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <span
      class="m-checkbox__label"
    >
      A Checkbox
    </span>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
  >
    <!---->
  </div>
</div>
`;

exports[`Storyshots components|m-checkbox/position=right error 1`] = `
<div
  class="m-checkbox m--is-checkbox-right m--has-error"
>
  <input
    class="m-checkbox__hidden"
    id="mCheckbox-189358c9-18cb-41d4-8f3c-08e378d0dca9"
    type="checkbox"
  />
   
  <!---->
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-189358c9-18cb-41d4-8f3c-08e378d0dca9"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <span
      class="m-checkbox__label"
    >
      A Checkbox
    </span>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
  >
    <!---->
  </div>
</div>
`;

exports[`Storyshots components|m-checkbox/position=right error-message 1`] = `
<div
  class="m-checkbox m--is-checkbox-right m--has-error"
>
  <input
    class="m-checkbox__hidden"
    id="mCheckbox-8b557c93-04d5-4d2e-9dfd-8a68b2c98149"
    type="checkbox"
  />
   
  <!---->
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-8b557c93-04d5-4d2e-9dfd-8a68b2c98149"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <span
      class="m-checkbox__label"
    >
      A Checkbox
    </span>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
  >
    <div
      class="m-validation-message__wrap"
    >
      <p
        class="m-validation-message__error"
      >
        <svg
          class="m-icon m-validation-message__error__icon"
          height="1em"
          width="1em"
        >
          <title>
            Erreur
          </title>
           
          <use
            aria-hidden="true"
            class=""
          />
        </svg>
         
        <span
          class="m-validation-message__text"
        >
          This is an error
        </span>
      </p>
       
      <!---->
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots components|m-checkbox/position=right focus 1`] = `
<div
  class="m-checkbox m--is-checkbox-right"
  focus="true"
>
  <input
    class="m-checkbox__hidden"
    id="mCheckbox-b90439f2-285e-4dda-9ceb-9717a05e5776"
    type="checkbox"
  />
   
  <!---->
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-b90439f2-285e-4dda-9ceb-9717a05e5776"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <span
      class="m-checkbox__label"
    >
      A Checkbox
    </span>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
  >
    <!---->
  </div>
</div>
`;

exports[`Storyshots components|m-checkbox/position=right readonly 1`] = `
<div
  class="m-checkbox m--is-checkbox-right m--is-readonly"
>
  <!---->
   
  <input
    id="mCheckbox-723f71d7-49e8-4649-a65b-6bfede1b800b"
    type="hidden"
    value="false"
  />
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-723f71d7-49e8-4649-a65b-6bfede1b800b"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <span
      class="m-checkbox__label"
    >
      A Checkbox
    </span>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
  >
    <!---->
  </div>
</div>
`;

exports[`Storyshots components|m-checkbox/position=right valid 1`] = `
<div
  class="m-checkbox m--is-checkbox-right m--is-valid"
>
  <input
    class="m-checkbox__hidden"
    id="mCheckbox-41ec535f-0b1e-44ac-8c9d-f2abc6f14387"
    type="checkbox"
  />
   
  <!---->
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-41ec535f-0b1e-44ac-8c9d-f2abc6f14387"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <span
      class="m-checkbox__label"
    >
      A Checkbox
    </span>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
  >
    <!---->
  </div>
</div>
`;

exports[`Storyshots components|m-checkbox/position=right value 1`] = `
<div
  class="m-checkbox m--is-checkbox-right m--is-checked"
>
  <input
    class="m-checkbox__hidden"
    id="mCheckbox-b9d1337d-60d6-4a3c-a16f-02eeebec7a74"
    type="checkbox"
  />
   
  <!---->
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-b9d1337d-60d6-4a3c-a16f-02eeebec7a74"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <span
      class="m-checkbox__label"
    >
      A Checkbox
    </span>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
  >
    <!---->
  </div>
</div>
`;

exports[`Storyshots components|m-checkbox/position=right/value disabled 1`] = `
<div
  class="m-checkbox m--is-checkbox-right m--is-checked m--is-disabled"
>
  <input
    class="m-checkbox__hidden"
    disabled="disabled"
    id="mCheckbox-db7e478f-afa5-4eaa-a82e-f1fe851a1052"
    type="checkbox"
  />
   
  <!---->
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-db7e478f-afa5-4eaa-a82e-f1fe851a1052"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <span
      class="m-checkbox__label"
    >
      A Checkbox
    </span>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
  >
    <!---->
  </div>
</div>
`;

exports[`Storyshots components|m-checkbox/position=right/value error 1`] = `
<div
  class="m-checkbox m--is-checkbox-right m--is-checked m--has-error"
>
  <input
    class="m-checkbox__hidden"
    id="mCheckbox-20863071-f9c8-4974-9562-38fe91b16268"
    type="checkbox"
  />
   
  <!---->
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-20863071-f9c8-4974-9562-38fe91b16268"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <span
      class="m-checkbox__label"
    >
      A Checkbox
    </span>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
  >
    <!---->
  </div>
</div>
`;

exports[`Storyshots components|m-checkbox/position=right/value error-message 1`] = `
<div
  class="m-checkbox m--is-checkbox-right m--is-checked m--has-error"
>
  <input
    class="m-checkbox__hidden"
    id="mCheckbox-6af3981c-50bb-4b21-b4b2-61ca66681f36"
    type="checkbox"
  />
   
  <!---->
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-6af3981c-50bb-4b21-b4b2-61ca66681f36"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <span
      class="m-checkbox__label"
    >
      A Checkbox
    </span>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
  >
    <div
      class="m-validation-message__wrap"
    >
      <p
        class="m-validation-message__error"
      >
        <svg
          class="m-icon m-validation-message__error__icon"
          height="1em"
          width="1em"
        >
          <title>
            Erreur
          </title>
           
          <use
            aria-hidden="true"
            class=""
          />
        </svg>
         
        <span
          class="m-validation-message__text"
        >
          This is an error
        </span>
      </p>
       
      <!---->
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots components|m-checkbox/position=right/value focus 1`] = `
<div
  class="m-checkbox m--is-checkbox-right m--is-checked"
  focus="true"
>
  <input
    class="m-checkbox__hidden"
    id="mCheckbox-24f6d1f0-661c-4bd3-883a-4b91437af6be"
    type="checkbox"
  />
   
  <!---->
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-24f6d1f0-661c-4bd3-883a-4b91437af6be"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <span
      class="m-checkbox__label"
    >
      A Checkbox
    </span>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
  >
    <!---->
  </div>
</div>
`;

exports[`Storyshots components|m-checkbox/position=right/value readonly 1`] = `
<div
  class="m-checkbox m--is-checkbox-right m--is-checked m--is-readonly"
>
  <!---->
   
  <input
    id="mCheckbox-7e3058cc-70af-4801-bd6b-29f0f64937f4"
    type="hidden"
    value="true"
  />
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-7e3058cc-70af-4801-bd6b-29f0f64937f4"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <span
      class="m-checkbox__label"
    >
      A Checkbox
    </span>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
  >
    <!---->
  </div>
</div>
`;

exports[`Storyshots components|m-checkbox/position=right/value valid 1`] = `
<div
  class="m-checkbox m--is-checkbox-right m--is-checked m--is-valid"
>
  <input
    class="m-checkbox__hidden"
    id="mCheckbox-b124c658-f7af-4547-bbc5-f4797d828198"
    type="checkbox"
  />
   
  <!---->
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-b124c658-f7af-4547-bbc5-f4797d828198"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <span
      class="m-checkbox__label"
    >
      A Checkbox
    </span>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
  >
    <!---->
  </div>
</div>
`;

exports[`Storyshots components|m-checkbox/value disabled 1`] = `
<div
  class="m-checkbox m--is-checkbox-left m--is-checked m--is-disabled"
>
  <input
    class="m-checkbox__hidden"
    disabled="disabled"
    id="mCheckbox-6ae1be82-9d6b-4f74-b061-356effefb1a5"
    type="checkbox"
  />
   
  <!---->
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-6ae1be82-9d6b-4f74-b061-356effefb1a5"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <span
      class="m-checkbox__label"
    >
      A Checkbox
    </span>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
  >
    <!---->
  </div>
</div>
`;

exports[`Storyshots components|m-checkbox/value error 1`] = `
<div
  class="m-checkbox m--is-checkbox-left m--is-checked m--has-error"
>
  <input
    class="m-checkbox__hidden"
    id="mCheckbox-177d1e55-0cea-4fdf-8300-d0a3e18c127f"
    type="checkbox"
  />
   
  <!---->
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-177d1e55-0cea-4fdf-8300-d0a3e18c127f"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <span
      class="m-checkbox__label"
    >
      A Checkbox
    </span>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
  >
    <!---->
  </div>
</div>
`;

exports[`Storyshots components|m-checkbox/value error-message 1`] = `
<div
  class="m-checkbox m--is-checkbox-left m--is-checked m--has-error"
>
  <input
    class="m-checkbox__hidden"
    id="mCheckbox-2fbd6fdd-7b27-4ba6-8dff-c101d33b025d"
    type="checkbox"
  />
   
  <!---->
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-2fbd6fdd-7b27-4ba6-8dff-c101d33b025d"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <span
      class="m-checkbox__label"
    >
      A Checkbox
    </span>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
  >
    <div
      class="m-validation-message__wrap"
    >
      <p
        class="m-validation-message__error"
      >
        <svg
          class="m-icon m-validation-message__error__icon"
          height="1em"
          width="1em"
        >
          <title>
            Erreur
          </title>
           
          <use
            aria-hidden="true"
            class=""
          />
        </svg>
         
        <span
          class="m-validation-message__text"
        >
          This is an error
        </span>
      </p>
       
      <!---->
       
      <!---->
    </div>
  </div>
</div>
`;

exports[`Storyshots components|m-checkbox/value focus 1`] = `
<div
  class="m-checkbox m--is-checkbox-left m--is-checked"
  focus="true"
>
  <input
    class="m-checkbox__hidden"
    id="mCheckbox-55213564-4d36-4c70-be08-7b2c563227e1"
    type="checkbox"
  />
   
  <!---->
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-55213564-4d36-4c70-be08-7b2c563227e1"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <span
      class="m-checkbox__label"
    >
      A Checkbox
    </span>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
  >
    <!---->
  </div>
</div>
`;

exports[`Storyshots components|m-checkbox/value readonly 1`] = `
<div
  class="m-checkbox m--is-checkbox-left m--is-checked m--is-readonly"
>
  <!---->
   
  <input
    id="mCheckbox-552076c6-21eb-4a6a-93bd-0e268d8a9e41"
    type="hidden"
    value="true"
  />
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-552076c6-21eb-4a6a-93bd-0e268d8a9e41"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <span
      class="m-checkbox__label"
    >
      A Checkbox
    </span>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
  >
    <!---->
  </div>
</div>
`;

exports[`Storyshots components|m-checkbox/value valid 1`] = `
<div
  class="m-checkbox m--is-checkbox-left m--is-checked m--is-valid"
>
  <input
    class="m-checkbox__hidden"
    id="mCheckbox-b5d6384f-052f-457a-b71e-bfc265f0b0da"
    type="checkbox"
  />
   
  <!---->
   
  <label
    class="m-checkbox__wrap"
    for="mCheckbox-b5d6384f-052f-457a-b71e-bfc265f0b0da"
  >
    <span
      aria-hidden="true"
      class="m-checkbox__input"
    >
      <span
        class="m-checkbox__input__icon"
      />
    </span>
     
    <span
      class="m-checkbox__label"
    >
      A Checkbox
    </span>
  </label>
   
  <div
    class="m-validation-message m-checkbox__message"
  >
    <!---->
  </div>
</div>
`;
